--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			</select> 			
  		</section>		
 	  <-->
+
 	  	
 	  <article class="QuizCard">
 			<div class="main-QuizCard">
@@ -65,6 +66,8 @@
 	      </div>
 	    </div>
 	  </article>
+	  
+	  <!--
 
 	  <article class="QuizCard">
 			<div class="main-QuizCard">
@@ -230,6 +233,7 @@
 	      </div>
 	    </div>
 	  </article>
+	  <-->
 	  
 		</main>
 
@@ -240,6 +244,7 @@
 		</footer>
 		
 		<!--/////JAVASCRIPT FILES/////<-->
+			<script type="text/javascript" src="Js/ClassquizCard.js"></script>
 		<script type="text/javascript" src="Js/main.js"></script>
 		<script type="text/javascript" src="Js/sortingContent.js"></script>
 	</body>
