working on dom creation from json

--- a/index.html
+++ b/index.html
@@ -51,188 +51,17 @@
  		</section>		
 	  <-->
 
-	  	
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Kaamelott" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizKaamelott.jpg" class="portrait">
-					<h1 class="name">Kaamelott</h1>
-					<div class="tags a00 films series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Si vous passez pour des pégus, faudra pas venir faire vos raclettes.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-	  
 	  <!--
 
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Alien" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizAlien.jpg" class="portrait">
-					<h1 class="name">Alien</h1>
-					<div class="tags a80 films"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Vos voisins, eux, risquent de vous entendre crier.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
+	Alien ./Ressources/Photos/QuizAlien.jpg
+	Alien
+	tags a80 films
+	Vos voisins, eux, risquent de vous entendre crier.
 
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Got" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizGot.jpg" class="portrait">
-					<h1 class="name">G.O.T</h1>
-					<div class="tags a00 series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Defeat is coming</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	 <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Kaamelott" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizKaamelott.jpg" class="portrait">
-					<h1 class="name">Kaamelott</h1>
-					<div class="tags a00 films series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Si vous passez pour des pégus, faudra pas venir faire vos raclettes.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Alien" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizAlien.jpg" class="portrait">
-					<h1 class="name">Alien</h1>
-					<div class="tags a80 films"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Vos voisins, eux, risquent de vous entendre crier.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Got" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizGot.jpg" class="portrait">
-					<h1 class="name">G.O.T</h1>
-					<div class="tags a00 series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Defeat is coming</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Kaamelott" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizKaamelott.jpg" class="portrait">
-					<h1 class="name">Kaamelott</h1>
-					<div class="tags a00 films series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Si vous passez pour des pégus, faudra pas venir faire vos raclettes.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Alien" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizAlien.jpg" class="portrait">
-					<h1 class="name">Alien</h1>
-					<div class="tags a80 films"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Vos voisins, eux, risquent de vous entendre crier.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Got" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizGot.jpg" class="portrait">
-					<h1 class="name">G.O.T</h1>
-					<div class="tags a00 series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Defeat is coming</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Kaamelott" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizKaamelott.jpg" class="portrait">
-					<h1 class="name">Kaamelott</h1>
-					<div class="tags a00 films series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Si vous passez pour des pégus, faudra pas venir faire vos raclettes.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Alien" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizAlien.jpg" class="portrait">
-					<h1 class="name">Alien</h1>
-					<div class="tags a80 films"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Vos voisins, eux, risquent de vous entendre crier.</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
-
-	  <article class="QuizCard">
-			<div class="main-QuizCard">
-				<div id="Got" class="thatQuiz">
-					<img src="./Ressources/Photos/QuizGot.jpg" class="portrait">
-					<h1 class="name">G.O.T</h1>
-					<div class="tags a00 series"></div>
-				</div>
-	      <div class="line-container">
-	      	<div class="line-content">
-	      	  <p >Defeat is coming</p>
-	        </div>
-	      </div>
-	    </div>
-	  </article>
+	Got" ./Ressources/Photos/QuizGot.jpg
+	G.O.T
+	tags a00 series
+	Defeat is coming
 	  <-->
 	  
 		</main>
