--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</footer>
 		
 		<!--/////JAVASCRIPT FILES/////<-->
-			<script type="text/javascript" src="Js/ClassquizCard.js"></script>
+			<script type="text/javascript" src="Js/classquizCard.js"></script>
 		<script type="text/javascript" src="Js/main.js"></script>
 		<script type="text/javascript" src="Js/sortingContent.js"></script>
 	</body>
