--- a/QuizPage.html
+++ b/QuizPage.html
@@ -70,5 +70,6 @@
     </div>    
   </main>
 </body>
+<script type="text/javascript" src="Js/classquizCard.js"></script>
 <script type="text/javascript" src="Js/page.js"></script>
 </html>
