--- a/quizPageKaamelott.html
+++ b/quizPageKaamelott.html
@@ -19,7 +19,7 @@
         <h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
       </a>  
         <div class="banner">
-          <h1 class="sub-logo for-this-quiz"></h1><!--//////////DYNAMIC sub-logo Alors on se prend pour un pro de Kaamelott ?//////////<-->
+          <h1 class="sub-logo this-taunt"></h1><!--//////////DYNAMIC sub-logo//////////Alors on se prend pour un pro de Kaamelott ?<-->
     </div>          
     </header>
 
