--- a/quizPageG.O.T.html
+++ b/quizPageG.O.T.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <meta charset="utf-8" />
-    <title>cultQuiz Kaamelott</title><!--//////////DYNAMIC title//////////<-->
+    <title>cultQuiz G.O.T</title><!--//////////DYNAMIC title//////////<-->
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="style/pages.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,11 +19,11 @@
         <h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
       </a>  
         <div class="banner">
-          <h1 class="sub-logo">Alors on se prend pour un pro de Kaamelott ?</h1><!--//////////DYNAMIC sub-logo//////////<-->
+          <h1 class="sub-logo"></h1><!--//////////DYNAMIC sub-logo//////////<-->
     </div>          
     </header>
 
-    <main class="mainId" id="Kaamelott"><!--//////////DYNAMIC id//////////<-->
+    <main class="mainId" id="G.O.T"><!--//////////DYNAMIC id//////////<-->
    
 
     <div class="container">
