working on pageQuiz

--- a/quizPageAlien.html
+++ b/quizPageAlien.html
@@ -19,7 +19,7 @@
         <h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
       </a>  
         <div class="banner">
-          <h1 class="sub-logo"></h1><!--//////////DYNAMIC sub-logo//////////<-->
+          <h1 class="sub-logothis-taunt"></h1><!--//////////DYNAMIC sub-logo//////////<-->
     </div>          
     </header>
 
