work in progress

--- a/index.html
+++ b/index.html
@@ -14,54 +14,35 @@
 	<body>
 
 		<header>
-
 			<a id="logo" href="index.html">
 				<img class="logo" alt="cultQuiz logo" src="./Ressources/Logo/cultQuizLogo.png">
 				<h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
 			</a>
-			
 
 			<nav>
 				<a class="allTags" href="#">Tous</a>
-				<a class="films" href="#">Films</a><!--tagportrait<-->
-				<a class="series">Séries</a><!--travel<-->
-				<a class="jeux-video" href="#">Jeux vidéos</a><!--fashion<-->
-				<a class="bd" href="#">Bd, Comic Books, Mangas</a><!--architecture<-->
-				<a class="animes" href="#">Dessins animés</a><!--art<-->
-				<a class="a80" href="#">Années 80</a><!--sports<-->
-				<a class="a90" href="#">Années 90</a><!--animals<-->
-				<a class="a00" href="#">Années 2000</a><!--events<-->
-			</nav>	
-			
+				<a class="films" href="#">Films</a>
+				<a class="series">Séries</a>
+				<a class="jeux-video" href="#">Jeux vidéos</a>
+				<a class="bd" href="#">Bd, Comic Books, Mangas</a>
+				<a class="animes" href="#">Dessins animés</a>
+				<a class="a80" href="#">Années 80</a>
+				<a class="a90" href="#">Années 90</a>
+				<a class="a00" href="#">Années 2000</a>
+			</nav>			
 		</header>
 
-
-		<!--/////SECTION FOR Quiz CARDS/////<-->
-		<main id="main-section" class="main-section">
-
-		<!--/////SORTING MENU////<-->
-		<!--
- 		<section class="sorting">
-      <label for="sort-by">Trier par</label>
-      <select id="sort-by" class="button-type">
-        <option value="valeur1" selected >Popularité</option>
-  			<option value="valeur2">Date</option>
-  			<option value="valeur3">Titre</option>
-			</select> 			
- 		</section>		
-	  <-->
-
-		</main>
+		<main id="main-section" class="main-section"></main>
 
 		<footer>
-			<!--<img class="miniLogo" alt="mini logo cultQuiz" src="./Ressources/Logo/cultQuizMiniLogo.jpg"><-->
 			<a class="foot1" href="#">À propos</a>
 			<a class="contact" href="mailto:gillian.brousse@neuf.fr">Contact</a>
 		</footer>
-		
-		<!--/////JAVASCRIPT FILES/////<-->
-			<script type="text/javascript" src="Js/classquizCard.js"></script>
+
+		<script type="text/javascript" src="Js/classquizCard.js"></script>
+		<script type="text/javascript" src="Js/init.js"></script>
 		<script type="text/javascript" src="Js/main.js"></script>
 		<script type="text/javascript" src="Js/sortingContent.js"></script>
+
 	</body>
 </html>
