work in progress

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -62,6 +62,15 @@
 
     </main>
 
+    <!--/////score modal/////<--> 
+    <div class="bground2">
+      <div class="content2">
+        <div class="modal-body2">
+          <p class="reaction"></p>
+        </div>
+      </div>
+    </div>
+
   </body>
 
   <script type="text/javascript" src="Js/classquizCard.js"></script>
