--- a/QuizPage.html
+++ b/QuizPage.html
@@ -66,7 +66,7 @@
     <div class="bground2">
       <div class="content2">
         <div class="modal-body2">
-          <p class="reaction"></p>
+          <div class="reaction"></div>
         </div>
       </div>
     </div>
