--- a/QuizPage.html
+++ b/QuizPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <meta charset="utf-8" />
-    <title></title>
+    <title>Quiz Page</title>
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="style/pages.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
