work in progress

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -47,11 +47,9 @@
 
       <div class="retryOrLeave">
 
-        <a href="QuizPage.html">
-          <button class="btn">
+          <button class="btn retry">
             <p>Réessayer</p>
           </button>
-        </a>
 
         <a href="index.html">
           <button class="btn">
@@ -66,6 +64,7 @@
     <div class="bground2">
       <div class="content2">
         <div class="modal-body2">
+          <span class="close" title="Close contact form" tabindex="0"  aria-label="close modal"></span>
           <div class="reaction"></div>
         </div>
       </div>
