--- a/QuizPage.html
+++ b/QuizPage.html
@@ -23,6 +23,11 @@
 
     <main>
 
+      <div class="retryOrLeave">
+        <button class="btn retry"><p>Réessayer</p></button>
+        <a href="index.html"><button class="btn"><p>Retour aux Quiz</p></button></a>        
+      </div>      
+
       <div class="container">
         <div id="quiz">
           <h2 id="question"></h2>
@@ -43,19 +48,6 @@
           </div>
           <p id="progress"></p>
         </div>
-      </div>
-
-      <div class="retryOrLeave">
-
-          <button class="btn retry">
-            <p>Réessayer</p>
-          </button>
-
-        <a href="index.html">
-          <button class="btn">
-            <p>Retour aux Quiz</p>
-          </button>
-        </a>        
       </div>
 
     </main>
