--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<a class="allTags" href="#">Tous</a>
 				<a class="films" href="#">Films</a>
 				<a class="series">Séries</a>
+				<a class="livres">Livres</a>
 				<a class="jeux-video" href="#">Jeux vidéos</a>
 				<a class="bd" href="#">Bd, Comic Books, Mangas</a>
 				<a class="animes" href="#">Dessins animés</a>
