Work in progress

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a class="series">Séries</a>
 				<a class="livres">Livres</a>
 				<a class="jeux-video" href="#">Jeux vidéos</a>
-				<a class="bd" href="#">Bd, Comic Books, Mangas</a>
+				<a class="bede" href="#">Bd, Comic Books, Mangas</a>
 				<a class="animes" href="#">Dessins animés</a>
 			</nav>			
 		</header>
