--- a/QuizPage.html
+++ b/QuizPage.html
@@ -48,7 +48,7 @@
       
       <div class="retryOrLeave">
         <button class="btn retry"><p>Réessayer</p></button>
-        <a href="index.html"><button class="btn"><p>Retour aux Quiz</p></button></a>        
+        <a href="index.html"><button class="btn backhome"><p>Retour aux Quiz</p></button></a>        
       </div> 
 
     </main>
