--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 	<body>
 
 		<header>
-			<a id="logo" href="index.html">
+			<a id="logo" href="index.html" class="bounce-in-top">
 				<img class="logo" alt="cultQuiz logo" src="./Ressources/Logo/cultQuizLogo.png">
 				<h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
 			</a>
 
-			<nav>
-				<a class="allTags" href="#">Tous</a>
-				<a class="films" href="#">Films</a>
-				<a class="series">Séries</a>
-				<a class="livres">Livres</a>
-				<a class="jeux-video" href="#">Jeux vidéos</a>
-				<a class="bede" href="#">Bd, Comic Books, Mangas</a>
-				<a class="animes" href="#">Dessins animés</a>
+			<nav class="swing-in-top-fwd" >
+				<a class="allTags swing-in-top-fwd" href="#">Tous</a>
+				<a class="films swing-in-top-fwd2" href="#">Films</a>
+				<a class="series swing-in-top-fwd3">Séries</a>
+				<a class="livres swing-in-top-fwd4">Livres</a>
+				<a class="jeux-video swing-in-top-fwd5" href="#">Jeux vidéos</a>
+				<a class="bede swing-in-top-fwd6" href="#">Bd, Comic Books, Mangas</a>
+				<a class="animes swing-in-top-fwd7" href="#">Dessins animés</a>
 			</nav>			
 		</header>
 
 		<main id="main-section" class="main-section"></main>
 
-		<footer>
-			<a class="foot1" href="#">À propos</a>
-			<a class="contact" href="mailto:gillian.brousse@neuf.fr">Contact</a>
+		<footer class="bounce-in-bottom">
+			<a class="foot1 swing-in-bottom-fwd" href="#">À propos</a>
+			<a class="contact swing-in-bottom-fwd" href="mailto:gillian.brousse@neuf.fr">Contact</a>
 		</footer>
 
 		<script type="text/javascript" src="Js/classquizCard.js"></script>
