--- a/QuizPage.html
+++ b/QuizPage.html
@@ -13,6 +13,13 @@
   </head>
 
   <body>
+    <!-- PARTICLE SYSTEM -->
+    <div class="animation-wrapper">
+      <div class="particle particle-1"></div>
+      <div class="particle particle-2"></div>
+      <div class="particle particle-3"></div>
+      <div class="particle particle-4"></div>
+    </div>
 
     <header>
       <a id="logo" href="index.html">
