--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
 	</head>
 
 	<body>
-		<!-- PARTICLE SYSTEM -->
-		<div class="animation-wrapper">
-  		<div class="particle particle-1"></div>
-  		<div class="particle particle-2"></div>
-  		<div class="particle particle-3"></div>
-  		<div class="particle particle-4"></div>
-	</div>
 
 		<header>
 			<a id="logo" href="index.html" class="bounce-in-top">
@@ -28,13 +21,13 @@
 			</a>
 
 			<nav class="swing-in-top-fwd" >
-				<a class="allTags swing-in-top-fwd" href="#">Tous</a>
-				<a class="films swing-in-top-fwd2" href="#">Films</a>
-				<a class="series swing-in-top-fwd3">Séries</a>
-				<a class="livres swing-in-top-fwd4">Livres</a>
-				<a class="jeux-video swing-in-top-fwd5" href="#">Jeux vidéos</a>
-				<a class="bede swing-in-top-fwd6" href="#">Bd, Comic Books, Mangas</a>
-				<a class="animes swing-in-top-fwd7" href="#">Dessins animés</a>
+				<a class="allTags" href="#">Tous</a>
+				<a class="films" href="#">Films</a>
+				<a class="series">Séries</a>
+				<a class="livres">Livres</a>
+				<a class="jeux-video" href="#">Jeux vidéos</a>
+				<a class="bede" href="#">Bd, Comic Books, Mangas</a>
+				<a class="animes" href="#">Dessins animés</a>
 			</nav>			
 		</header>
 
@@ -49,6 +42,14 @@
 		<script type="text/javascript" src="Js/init.js"></script>
 		<script type="text/javascript" src="Js/main.js"></script>
 		<script type="text/javascript" src="Js/sortingContent.js"></script>
+
+				<!-- PARTICLE SYSTEM -->
+		<div class="animation-wrapper">
+  		<div class="particle particle-1"></div>
+  		<div class="particle particle-2"></div>
+  		<div class="particle particle-3"></div>
+  		<div class="particle particle-4"></div>
+	</div>
 
 	</body>
 </html>
