--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
   		<div class="particle particle-3"></div>
   		<div class="particle particle-4"></div>
 		</div>
+		<div class="animation-wrapper2">
+  		<div class="particle2 particle2-1"></div>
+  		<div class="particle2 particle2-2"></div>
+  		<div class="particle2 particle2-3"></div>
+  		<div class="particle2 particle2-4"></div>
+		</div>
 
 	</body>
 
