--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 	<body>
 
+		<div class="loader-background">
+			<div class="loader"></div>
+		</div>
+
 		<header>			
 			<a id="logo" href="index.html" class="bounce-in-top">
 				<img class="logo" alt="cultQuiz logo" src="./Ressources/Logo/cultQuizLogo.png">
