--- a/QuizPage.html
+++ b/QuizPage.html
@@ -17,7 +17,7 @@
     <header>
       <a id="logo" href="index.html">
         <img class="logo" alt="cultQuiz logo" src="./Ressources/Logo/cultQuizLogo.png">
-        <h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
+        <h1 class="nameOfQuiz">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
       </a>  
         <div class="banner"><h1 class="sub-logo taunt"></h1></div>          
     </header>
