added multiplayer button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 				<a class="jeux-video" href="#">Jeux vidéos</a>
 				<a class="bede" href="#">Bd, Comic Books, Mangas</a>
 				<a class="animes" href="#">Dessins animés</a>
-			</nav>			
+				<a class="swing-in-top-fwd multi" href="#">Jouer à plusieurs</a>
+			</nav>
+				
 		</header>
 
 		<main id="main-section" class="main-section"></main>
