added multiplayer button

--- a/QuizPage.html
+++ b/QuizPage.html
@@ -75,5 +75,6 @@
   <script type="text/javascript" src="Js/classquizCard.js"></script>
   <script type="text/javascript" src="Js/init.js"></script>
   <script type="text/javascript" src="Js/page.js"></script>
+  <script type="text/javascript" src="Js/multiplayer.js"></script>
   
 </html>
