RESPONSIVE FOR MULTIPLAYER MODAL

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           method="get"
           onsubmit="validate();">	  
 	          <div class="formData">
-	          	<label>Joueur / Équipe 1</label><br>
+	          	<label>Joueur / Équipe 1 :</label><br>
 	            <input
 	              class="text-control first"
 	              type="text"
@@ -86,7 +86,7 @@
 	            />             
 	          </div>	  
 	          <div class="formData">
-		          <label>Joueur / Équipe 2</label><br>
+		          <label>Joueur / Équipe 2 :</label><br>
 	              <input
 	                class="text-control second"
 	                type="text"
