--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 				<img class="logo" alt="cultQuiz logo" src="./Ressources/Logo/cultQuizLogo.png">
 				<h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
 			</a>
+			<div class="multiheader">
+				<div class="Player player1">
+					<p class="nom-player nom-player1">Joueur 1</p>
+					<p class="score sPlayer1">: 10 points</p>			
+				</div>
+
+				<div class="contre"><p>VS</p></div>
+
+				<div class="Player player2">
+					<p class="nom-player nom-player2">Joueur 2</p>
+					<p class="score sPlayer2">: 7 points</p>
+				</div>				
+			</div>
 
 			<nav class="swing-in-top-fwd" >
 				<a class="allTags" href="#">Tous</a>
