--- a/QuizPageMulti.html
+++ b/QuizPageMulti.html
@@ -96,7 +96,6 @@
 
   <script type="text/javascript" src="Js/classquizCard.js"></script>
   <script type="text/javascript" src="Js/init.js"></script>
-  <script type="text/javascript" src="Js/page.js"></script>
-  <!--<script type="text/javascript" src="Js/multiplayer.js"></script><-->
+  <script type="text/javascript" src="Js/pageMulti.js"></script>
   
 </html>
