--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
 	<script type="text/javascript" src="Js/init.js"></script>
 	<script type="text/javascript" src="Js/main.js"></script>
 	<script type="text/javascript" src="Js/sortingContent.js"></script>
-	<script type="text/javascript" src="Js/multiplayer.js"></script>
+	<script type="text/javascript" src="Js/multi.js"></script>
 	
 </html>
