--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 	             />              
 	          </div><br> 
 	          <div class="lastLine">
-	          	<button class="btn back">Retour</button>
-	            <button class="btn-submit btn">Jouer à plusieurs</button>	           
+	          	 <button class="btn-submit btn">Jouer à plusieurs</button>	           
+	          	 <!--<button class="btn back">Retour</button><-->
 	           </div> 
           </form>          
         </div>
