--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 	              id="first"
 	              name="first"
 	              minlength="2"
+	              maxlength ="10"
 	              required
 	            />             
 	          </div>	  
@@ -107,6 +108,7 @@
 	                id="second"
 	                name="second"
 	                minlength="2"
+	                maxlength ="10"
 	                required
 	             />              
 	          </div><br> 
