--- a/QuizPage.html
+++ b/QuizPage.html
@@ -44,7 +44,7 @@
       </div> 
     </header>
 
-    <main>    
+    <main id="main-section">    
 
       <div class="container">
         <div id="quiz">
