--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 			
 			<div class="multiheader">
 				<div class="Player player1">
-					<p class="nom-player nom-player1">Joueur 1</p>
-					<p class="score sPlayer1">: 10 points</p>			
+					<p class="nom-player nom-player1"></p>
+					<p class="score sPlayer1"></p>			
 				</div>
 
 				<div class="contre"><p>VS</p></div>
 
 				<div class="Player player2">
-					<p class="nom-player nom-player2">Joueur 2</p>
-					<p class="score sPlayer2">: 7 points</p>
+					<p class="nom-player nom-player2"></p>
+					<p class="score sPlayer2"></p>
 				</div>				
 			</div>
 
