responsive for multimodal : OK

--- a/index.html
+++ b/index.html
@@ -77,11 +77,10 @@
     <div class="bground2 openMultiModal">
       <div class="content2">
         <div class="modal-body2">
-          <span class="close" title="Close contact form"></span>
-         
-          <h1 class="firstH1">Il est possible pour deux joueurs ou bien deux équipes de s'affronter.</h1>
-          <h1 class="SecH1">Dans ce cas, les quiz sélectionnés seront divisés aléatoirement en deux séries de 10 questions.</h1> 
-        	<h1>Chaque joueur / équipe répondra à son tour, et les scores seront comparés en fin de partie afin de déterminer le vainqueur.</h1>
+          <span class="close" title="Close contact form"></span>         
+          <p>Il est possible pour deux joueurs ou bien deux équipes de s'affronter.</p>
+          <p>Dans ce cas, les quiz sélectionnés seront divisés aléatoirement en deux séries de 10 questions.</p>
+        	<p>Chaque joueur/équipe répondra à son tour, et les scores seront comparés en fin de partie afin de déterminer le vainqueur.</p>
           <form
           class = "modal-form"
           name="multi"
@@ -89,7 +88,7 @@
           method="get"
           onsubmit="validate();">	  
 	          <div class="formData">
-	          	<label>Joueur / Équipe 1 :</label><br>
+	          	<label>Joueur / Équipe 1</label>
 	            <input
 	              class="text-control first"
 	              type="text"
@@ -101,7 +100,7 @@
 	            />             
 	          </div>	  
 	          <div class="formData">
-		          <label>Joueur / Équipe 2 :</label><br>
+		          <label>Joueur / Équipe 2</label>
 	              <input
 	                class="text-control second"
 	                type="text"
@@ -112,9 +111,9 @@
 	                required
 	             />              
 	          </div> 
-	          <div class="lastLine">
-	          	<button class="btn-submit btn">Jouer à plusieurs</button>
-	          </div> 
+	          <div class="btn-wrapper">
+	          	<button class="btn-submit btn">Jouer à plusieurs</button>	
+	          </div>
           </form>          
         </div>
       </div>
