--- a/QuizPageMulti.html
+++ b/QuizPageMulti.html
@@ -31,15 +31,15 @@
       
       <div class="multiheader jelloBanner">
         <div class="Player player1">
-          <p class="nom-player nom-player1">Joueur 1</p>
-          <p class="score sPlayer1">: 10 points</p>     
+          <p class="nom-player nom-player1"></p>
+          <p class="score scoreN sPlayer1"></p> <p class="score points1">points</p>   
         </div>
 
         <div class="contre"><p>VS</p></div>
 
         <div class="Player player2">
-          <p class="nom-player nom-player2">Joueur 2</p>
-          <p class="score sPlayer2">: 7 points</p>
+          <p class="nom-player nom-player2"></p>
+          <p class="score scoreN sPlayer2"></p> <p class="score points2">points</p>
         </div>        
       </div> 
     </header>
@@ -48,6 +48,7 @@
 
       <div class="container">
         <div id="quiz">
+          <h2 class="thatPlayer"></h2>
           <h2 id="question"></h2>
           <h3 id="score"></h3>
           <div class="choices">
