--- a/QuizPageMulti.html
+++ b/QuizPageMulti.html
@@ -44,7 +44,10 @@
       </div> 
     </header>
 
-    <main>    
+    <main id="main-section"> 
+      <div class="retryOrLeave">
+        <a href="index.html"><button class="btn backhome"><p>Retour aux Quiz</p></button></a>        
+      </div>    
 
       <div class="container">
         <div id="quiz">
@@ -68,12 +71,6 @@
           <p id="progress"></p>
         </div>
       </div>
-      
-      <div class="retryOrLeave">
-        <button class="btn retry"><p>Réessayer</p></button>
-        <a href="index.html"><button class="btn backhome"><p>Retour aux Quiz</p></button></a>        
-      </div> 
-
     </main>
 
     <!--/////score modal/////<--> 
