--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 				<h1 class="sub-logo">Parce qu'il faut bien que tout ce savoir inutile serve à quelque chose !</h1>
 			</a>
 			
-			<div class="multiheader">
-				<div class="Player player1">
-					<p class="nom-player nom-player1"></p>
-					<p class="score sPlayer1"></p>			
-				</div>
+      <div class="multiheader jelloBanner">
+        <div class="Player player1">
+          <p class="nom-player nom-player1"></p>
+          <p class="score scoreN sPlayer1"></p> <p class="score points1">points</p>   
+        </div>
 
-				<div class="contre"><p>VS</p></div>
+        <div class="contre"><p>VS</p></div>
 
-				<div class="Player player2">
-					<p class="nom-player nom-player2"></p>
-					<p class="score sPlayer2"></p>
-				</div>				
-			</div>
+        <div class="Player player2">
+          <p class="nom-player nom-player2"></p>
+          <p class="score scoreN sPlayer2"></p> <p class="score points2">points</p>
+        </div>        
+      </div>
 
 			<nav class="swing-in-top-fwd" >
 				<a class="allTags" href="#">Tous</a>
