--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="modal-body2">
           <span class="close" title="Close contact form"></span>         
           <p>Il est possible pour deux joueurs ou bien deux équipes de s'affronter.</p>
-          <p>Dans ce cas, les quiz sélectionnés seront divisés aléatoirement en deux séries de 10 questions.</p>
-        	<p>Chaque joueur/équipe répondra à son tour, et les scores seront comparés en fin de partie afin de déterminer le vainqueur.</p>
+          <p>Dans ce cas, vous répondrez chacun votre tour aux questions des quiz sélectionnés.</p>
+        	<p>Chaque joueur/équipe gagne un point par bonne réponse.</p>
           <form
           class = "modal-form"
           name="multi"
