--- a/QuizPageMulti.html
+++ b/QuizPageMulti.html
@@ -47,11 +47,10 @@
     <main id="main-section"> 
       <div class="retryOrLeave">
         <a href="index.html"><button class="btn backhome"><p>Retour aux Quiz</p></button></a>        
-      </div>    
-
+      </div> 
       <div class="container">
         <div id="quiz">
-          <h2 class="thatPlayer"></h2>
+          <h2 class="thatPlayer">Tour de :</h2>       
           <h2 id="question"></h2>
           <h3 id="score"></h3>
           <div class="choices">
