resising images DONE

--- a/index.html
+++ b/index.html
@@ -119,6 +119,19 @@
       </div>
     </div> 
 
+  <!--/////About MODAL/////<--> 
+
+    <div class="bground2 openAbout">
+      <div class="content2">
+        <div class="modal-body2">
+          <span class="close" title="Close contact form"></span>         
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+         </div>
+      </div>
+    </div>
+
 	</body>
 
 	<script type="text/javascript" src="Js/classquizCard.js"></script>
