--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<a class="series">Séries</a>
 				<a class="livres">Livres</a>
 				<a class="jeux-video" href="#">Jeux vidéos</a>
-				<a class="bede" href="#">Bd, Comic Books, Mangas</a>
+				<!--<a class="bede" href="#">Bd, Comic Books, Mangas</a><-->
 				<a class="animes" href="#">Dessins animés</a>
 				<a class="swing-in-top-fwd multi" href="#">Jouer à plusieurs</a>
 				<a class="solo" href="#">Un seul joueur</a>
