--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <div class="content2">
         <div class="modal-body2">
           <span class="close" title="Close contact form"></span>         
-          <p>Il est possible pour deux joueurs ou bien deux équipes de s'affronter.</p>
-          <p>Dans ce cas, vous répondrez chacun votre tour aux questions des quiz sélectionnés.</p>
-        	<p>Chaque joueur/équipe gagne un point par bonne réponse.</p>
+          <p class="normalModal">Il est possible pour deux joueurs ou bien deux équipes de s'affronter.</p>
+          <p class="normalModal">Dans ce cas, vous répondrez chacun votre tour aux questions des quiz sélectionnés.</p>
+        	<p class="normalModal">Chaque joueur/équipe gagne un point par bonne réponse.</p>
           <form
           class = "modal-form"
           name="multi"
@@ -122,12 +122,12 @@
   <!--/////About MODAL/////<--> 
 
     <div class="bground2 openAbout">
-      <div class="content2">
+      <div class="content2 openAbout2 ">
         <div class="modal-body2">
-          <span class="close" title="Close contact form"></span>         
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          <span class="close" title="Close contact form"></span>
+          <p class="openAboutp">Site réalisé en HTML, CSS & Javascript Vanilla</p>
+          <br>
+          <p class="openAboutp">Gillian Brousse - Front-Web Developpeur - 2021</p>
          </div>
       </div>
     </div>
