--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 				<a class="series">Séries</a>
 				<a class="livres">Livres</a>
 				<a class="jeux-video" href="#">Jeux vidéos</a>
-				<!--<a class="bede" href="#">Bd, Comic Books, Mangas</a><-->
 				<a class="animes" href="#">Dessins animés</a>
 				<a class="swing-in-top-fwd multi" href="#">Jouer à plusieurs</a>
 				<a class="solo" href="#">Un seul joueur</a>
@@ -125,19 +124,30 @@
       <div class="content2 openAbout2 ">
         <div class="modal-body2">
           <span class="close" title="Close contact form"></span>
-          <p class="openAboutp">Site réalisé en HTML, CSS & Javascript Vanilla</p>
+          <p class="openAboutp">Gillian Brousse_Front-Web développeur_2021</p>
           <br>
-          <p class="openAboutp">Gillian Brousse - Front-Web Developpeur - 2021</p>
+          <p class="openAboutp">_Projet personnel_</p>
+          <br> 
+          <p class="openAboutp oA1">Objectifs :</p><br>
+          <p class="openAboutp oA">	&#187;  Création du logo et de la charte graphique.<br>
+							&#187;  Code en Html/SCSS/JavaScript vanilla.<br>
+							&#187; POO & pages dynamiques.<br>
+							&#187; Rédaction des questions/réponses.<br>
+							&#187; Application de Quiz fonctionnelle.<br>
+							&#187; Animations fluides.<br>
+							&#187; Fonctionnalité de tri des quiz par sujet<br>
+							&#187; Mode multijoueur local.<br>
+							&#187; Site responsive desktop, tablet & mobile.</p>
+          <br>
          </div>
       </div>
     </div>
 
-	</body>
+	<script src="Js/classquizCard.js"></script>
+	<script src="Js/init.js"></script>
+	<script src="Js/main.js"></script>
+	<script src="Js/sortingContent.js"></script>
+	<script src="Js/multi.js"></script>
 
-	<script type="text/javascript" src="Js/classquizCard.js"></script>
-	<script type="text/javascript" src="Js/init.js"></script>
-	<script type="text/javascript" src="Js/main.js"></script>
-	<script type="text/javascript" src="Js/sortingContent.js"></script>
-	<script type="text/javascript" src="Js/multi.js"></script>
-	
+	</body>	
 </html>
