--- a/QuizPage.html
+++ b/QuizPage.html
@@ -79,7 +79,7 @@
     <div class="bground2">
       <div class="content2">
         <div class="modal-body2">
-          <span class="close" title="Close contact form" tabindex="0"  aria-label="close modal"></span>
+          <span class="close" title="Close contact form" tabindex="0"></span>
           <div class="reaction"></div>
         </div>
       </div>
@@ -92,10 +92,9 @@
       <div class="particle particle-4"></div>
     </div>
 
-  </body>
+  <script src="Js/classquizCard.js"></script>
+  <script src="Js/init.js"></script>
+  <script src="Js/page.js"></script>
 
-  <script type="text/javascript" src="Js/classquizCard.js"></script>
-  <script type="text/javascript" src="Js/init.js"></script>
-  <script type="text/javascript" src="Js/page.js"></script>
-  
+  </body>  
 </html>
